--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </script>
 
   <title>Wealth, shown to scale</title>
-  <meta name="description" content="Inequality in the United States is out of control. Here we visualize the issue in a unique way." />
+  <meta name="description" content="Tài sản." />
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@mkorostoff">
