--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="twitter:site" content="@mkorostoff">
   <meta name="twitter:creator" content="@mkorostoff">
   <meta name="twitter:title" content="Wealth, shown to scale">
-  <meta name="twitter:description" content="Inequality in the United States is out of control. Here we visualize the issue in a unique way.">
+  <meta name="twitter:description" content="Tài sản.">
   <meta name="twitter:image" content="https://mkorostoff.github.io/1-pixel-wealth/img/off-the-chart.png">
 
   <meta property="og:title" content="Wealth, shown to scale" />
